<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ===========================================================================================
                                         DATA BINDING - START
    ============================================================================================ -->

    <data>
        <variable
                name="viewModel"
                type="com.swivel.shared.ui.verify_mobile_number.VerifyMobileNumberViewModel" />

        <variable
                name="formData"
                type="com.swivel.shared.ui.verify_mobile_number.VerifyMobileNumberFormData" />
    </data>

    <!-- ===========================================================================================
                                         DATA BINDING - END
    ============================================================================================ -->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_main_bg">


        <!-- ===========================================================================================
                                         LAYOUT GUIDELINE - START
        ============================================================================================ -->

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_1"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.27"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/numberFieldHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_1"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
                />

        <!-- =======================================================================================
                                         LAYOUT GUIDELINE - END
        ======================================================================================== -->


        <!-- =======================================================================================
                                         HEADER - START
        ======================================================================================== -->

        <TextView
                android:id="@+id/welcome_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_mobile_number_welcome_to"
                style="@style/pageTitleBlack"
                app:layout_constraintTop_toTopOf="@id/topHorizontalGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textFontWeight="800"/>

        <ImageView
                android:id="@+id/swivel_logo"
                android:layout_width="@dimen/v_0"
                app:layout_constraintWidth_percent="0.65"
                android:layout_height="0dp"
                app:srcCompat="@drawable/ic_app_logo"
                app:layout_constraintDimensionRatio="H,227:47"
                app:layout_constraintTop_toBottomOf="@id/welcome_to"
                app:layout_constraintStart_toStartOf="@id/welcome_to"
                app:layout_constraintEnd_toEndOf="@id/welcome_to"
                android:layout_marginTop="@dimen/v_8"/>

        <TextView
                android:id="@+id/simplified_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_mobile_number_simplified_text"
                style="@style/labelGray"
                app:layout_constraintTop_toBottomOf="@id/swivel_logo"
                app:layout_constraintStart_toStartOf="@id/welcome_to"
                app:layout_constraintEnd_toEndOf="@id/welcome_to"
                android:layout_marginTop="@dimen/v_16"/>

        <!-- =======================================================================================
                                         HEADER - END
        ======================================================================================== -->

        <!-- =======================================================================================
                                         MOBILE NUMBER CONTAINER - START
        ======================================================================================== -->

        <androidx.cardview.widget.CardView
            android:id="@+id/mobileNumberCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/simplified_text"
                android:layout_marginTop="@dimen/v_24"
            android:layout_marginStart="@dimen/v_16"
            android:layout_marginEnd="@dimen/v_16"
                app:cardElevation="@dimen/v_16"
                app:cardCornerRadius="@dimen/v_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/v_24">

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/mobileNumberCardViewStartMarginGuideline"
                        android:layout_width="@dimen/v_0"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/v_0"
                        />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/mobileNumberCardViewEndMarginGuideline"
                        android:layout_width="@dimen/v_0"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/v_0"
                        />

                <TextView
                        android:id="@+id/enterMobileNumberLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textFieldLabelGray"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/mobileNumberCardViewStartMarginGuideline"
                        android:text="@string/verify_mobile_number_lbl_phone_number"
                        />

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/mobileNumberContainer"
                        android:layout_width="@dimen/v_0"
                        app:layout_constraintTop_toBottomOf="@id/enterMobileNumberLabel"
                        app:layout_constraintStart_toStartOf="@id/mobileNumberCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/mobileNumberCardViewEndMarginGuideline"
                        android:paddingStart="@dimen/v_16"
                        android:paddingEnd="@dimen/v_16"
                        android:layout_marginTop="@dimen/v_16"
                        style="@style/defaultEditTextContainer"
                        >

                    <ImageView
                            android:id="@+id/countryLogo"
                            android:layout_width="@dimen/v_32"
                            android:layout_height="@dimen/v_0"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="H,30:30"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_lk_logo" />

                    <TextView
                            android:id="@+id/countryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/pageTitleDarkGray"
                            app:layout_constraintStart_toEndOf="@id/countryLogo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="@dimen/v_16"
                            android:paddingEnd="@dimen/v_16"
                            android:text="@string/verify_mobile_number_country_code"
                            android:textSize="@dimen/text_normal_100"
                            tools:text="+94"/>

                    <View
                            android:id="@+id/tf_seperator"
                            android:layout_width="@dimen/v_1"
                            android:layout_height="@dimen/v_0"
                            android:background="@color/default_edit_text_border"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/countryCode"
                            app:layout_constraintEnd_toStartOf="@id/mobileNumberEditText" />

                    <EditText
                            android:id="@+id/mobileNumberEditText"
                            android:layout_width="@dimen/v_0"
                            android:layout_height="@dimen/v_0"
                            style="@style/mobileNumberEditTextField"
                            app:layout_constraintStart_toEndOf="@id/countryCode"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:inputType="phone"
                            android:imeOptions="actionDone"
                            android:maxLength="9"
                            tools:text="715134121"
                            onEditorEnterAction="@{viewModel.signIn}"
                            android:text="@={formData.mobileNumber}"
                            android:background="@null"
                            android:hint="@string/verify_mobile_number_hint"
                            android:textSize="@dimen/text_normal_100"
                            />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                        android:id="@+id/submitButton"
                        android:layout_width="@dimen/v_0"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.verifyMobileNumberDestinationConfig.submitButtonText}"
                        app:layout_constraintTop_toBottomOf="@id/mobileNumberContainer"
                        app:layout_constraintStart_toStartOf="@id/mobileNumberCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/mobileNumberCardViewEndMarginGuideline"
                        style="@style/GreenBarButtonStyle"
                        android:onClick="@{(v) -> viewModel.onTapSubmit(v)}"
                        android:layout_marginTop="@dimen/v_24"
                        tools:text="Next"
                        />

                <TextView
                        android:id="@+id/howToRegisterTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/submitButton"
                        app:layout_constraintEnd_toEndOf="@id/mobileNumberCardViewEndMarginGuideline"
                        android:layout_marginTop="@dimen/v_16"
                        style="@style/textButtonGray"
                        android:text="@string/verify_mobile_number_how_to_register"
                        android:paddingTop="@dimen/v_4"
                        android:paddingStart="@dimen/v_4"
                        android:paddingBottom="@dimen/v_4"
                        />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- =======================================================================================
                                         MOBILE NUMBER CONTAINER - END
        ======================================================================================== -->
        <!-- =======================================================================================
                                            BOTTOM CONTAINER - END
        ======================================================================================== -->

        <TextView
                android:id="@+id/poweredByText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_mobile_number_powered_by"
                app:layout_constraintBottom_toTopOf="@id/finapLogo"
                app:layout_constraintEnd_toEndOf="@id/finapLogo"
                android:layout_marginBottom="@dimen/v_4"
                style="@style/pageTitleDarkGray"
                android:textSize="@dimen/text_normal_75"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/finapLogo"
                app:layout_constraintWidth_percent="0.3"
                android:layout_width="@dimen/v_0"
                android:layout_height="@dimen/v_0"
                app:srcCompat="@drawable/ic_app_logo"
                app:layout_constraintDimensionRatio="H,227:47"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/v_16"
                android:layout_marginBottom="@dimen/v_16"/>

        <!-- =======================================================================================
                                            BOTTOM CONTAINER - END
        ======================================================================================== -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>