<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ***************************************************************************************************************
            DATA BINDING
    **************************************************************************************************************** -->

    <data>
        <variable name="viewModel" type="com.swivel.shared.ui.verify_otp.VerifyOtpViewModel"/>
    </data>

    <!-- ***************************************************************************************************************
            LAYOUT
    **************************************************************************************************************** -->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_main_bg">

        <!-- ===========================================================================================
                                         LAYOUT GUIDELINE - START
        ============================================================================================ -->

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topHorizontalGuideline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/v_1"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.27"/>

        <!-- =======================================================================================
                                         LAYOUT GUIDELINE - END
        ======================================================================================== -->

        <!-- =======================================================================================
                                         HEADER - START
        ======================================================================================== -->



        <!-- =======================================================================================
                                         HEADER - END
        ======================================================================================== -->

        <!-- =======================================================================================
                                        OTP CONTAINER - START
       ======================================================================================== -->

        <androidx.cardview.widget.CardView
                android:id="@+id/otpCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/v_16"
                android:layout_marginEnd="@dimen/v_16"
                app:cardElevation="@dimen/v_16"
                app:cardCornerRadius="@dimen/v_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/v_24">

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/otpCardViewStartMarginGuideline"
                        android:layout_width="@dimen/v_0"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="@dimen/v_0" />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/otpCardViewEndMarginGuideline"
                        android:layout_width="@dimen/v_0"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/v_0"
                        />

                <TextView
                        android:id="@+id/verifyOtpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/pageSubTitleDarkGray"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:text="@{String.format(@string/verify_otp_page_title, `+94 777152489`)}"
                        tools:text="VERIFY +94 777152489"
                        />

                <TextView
                        android:id="@+id/weSentCodeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labelGray"
                        app:layout_constraintTop_toBottomOf="@id/verifyOtpText"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:text="@string/verify_otp_description"
                        tools:text="We sent you a code to +94 777152489"
                        android:layout_marginTop="@dimen/v_16"
                        android:foregroundGravity="center_horizontal"
                        />

                <TextView
                        android:id="@+id/wesentCodeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/pageSubTitleDarkGray"
                        app:layout_constraintTop_toBottomOf="@id/weSentCodeText"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:text="+94 777152489"
                        tools:text="+94 777152489"
                        android:foregroundGravity="center_horizontal"
                        />

                <TextView
                        android:id="@+id/enterYourCodeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labelGray"
                        app:layout_constraintTop_toBottomOf="@id/wesentCodeNumber"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:text="@string/verify_otp_enter_otp"
                        android:layout_marginTop="@dimen/v_24"
                        />

                <!-- ===============================================================================
                                        OTP BOX CONTAINER - START
                ================================================================================ -->


                <EditText
                        android:id="@+id/otpCode1"
                        style="@style/defaultEditTextField"
                        android:layout_width="@dimen/v_48"
                        android:layout_height="@dimen/v_0"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintEnd_toStartOf="@+id/otpCode2"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintTop_toBottomOf="@id/enterYourCodeText"
                        android:layout_marginTop="@dimen/v_8"/>

                <EditText
                        android:id="@+id/otpCode2"
                        style="@style/defaultEditTextField"
                        android:layout_width="@dimen/v_48"
                        android:layout_height="@dimen/v_0"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintBaseline_toBaselineOf="@id/otpCode1"
                        app:layout_constraintEnd_toStartOf="@+id/otpCode3"
                        app:layout_constraintStart_toEndOf="@+id/otpCode1" />

                <EditText
                        android:id="@+id/otpCode3"
                        style="@style/defaultEditTextField"
                        android:layout_width="@dimen/v_48"
                        android:layout_height="@dimen/v_0"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintBaseline_toBaselineOf="@id/otpCode1"
                        app:layout_constraintEnd_toStartOf="@+id/otpCode4"
                        app:layout_constraintStart_toEndOf="@+id/otpCode2" />

                <EditText
                        android:id="@+id/otpCode4"
                        style="@style/defaultEditTextField"
                        android:layout_width="@dimen/v_48"
                        android:layout_height="@dimen/v_0"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintBaseline_toBaselineOf="@id/otpCode1"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        app:layout_constraintStart_toEndOf="@+id/otpCode3" />


                <!-- ===============================================================================
                                        OTP BOX CONTAINER - END
                ================================================================================ -->

                <TextView
                        android:id="@+id/codeNotReceivedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/labelGray"
                        app:layout_constraintTop_toBottomOf="@id/otpCode1"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:text="@string/verify_otp_code_not_received"
                        android:layout_marginTop="@dimen/v_24"
                        />

                <TextView
                        android:id="@+id/resendCodeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/codeNotReceivedText"
                        app:layout_constraintStart_toStartOf="@id/otpCardViewStartMarginGuideline"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:layout_marginTop="@dimen/v_8"
                        style="@style/textButtonGray"
                        android:text="@string/verify_otp_resend_btn_text"
                        />

                <!--<TextView
                        android:id="@+id/howToRegisterTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/submitButton"
                        app:layout_constraintEnd_toEndOf="@id/otpCardViewEndMarginGuideline"
                        android:layout_marginTop="@dimen/v_16"
                        style="@style/textButtonGray"
                        android:text="@string/verify_mobile_number_how_to_register"
                        android:paddingTop="@dimen/v_4"
                        android:paddingStart="@dimen/v_4"
                        android:paddingBottom="@dimen/v_4"
                        />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- =======================================================================================
                                         OTP CONTAINER - END
        ======================================================================================== -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>